--- a/syte.html
+++ b/syte.html
@@ -71,21 +71,48 @@
                 </div>
                 <div
                     class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                    <p>Osalemine õpilasfirmas andis hea kogemuse. Peamiseks minu ülesandeks õpilasfirmas oli Syte
-                        kodulehe kujundamine. Õppisin väga palju,
-                        kuidas teha kodulehe prototüüp ning hiljem disainida õpilasfirma koduleht. Sellega kaasnes palju
-                        iseseisvat õppimist ja HTML ning
-                        CSS programmeerimimise keeltega töötamist. Peale kodulehe sain ka mõningaid kujundusi proovida -
-                        näiteks discgolfi ketastele kujunduse tegemine. </p>
+                    <p>Õpilasfirma SYTE eesmärgiks oli pakkuda kvaliteetset ja silmapaistvat kujundusteenust, seda nii
+                        eraisikutele kui ka
+                        ettevõtetele, jõudmaks üheskoos soovitud kujunduslahenduseni.
+
+                        Kujundusgraafikutena peame äärmiselt oluliseks visuaalset identiteeti, kontseptsiooni ning selle
+                        teostust.
+                    </p>
+                    <ol> <label for="">Minu panus meeskonnas</label>
+                        <li>
+                            Minu üheks peamiseks ülesandeks oli kujundada koduleht, mis aitaks õpilasfirmal tutvustada
+                            meeskonna poolt loodud kujunduslahendusi.
+
+                        <li>
+                            Esmalt kujundasin Figma programmis Syte kodulehe prototüübi.
+                        <li>
+                            Järgnevalt tutvustasin loodud prototüüpi tiimikaaslastele.
+
+                        <li>
+                            Kui prototüüp sai positiivse tagasiside tiimikaaslastelt siis hakkasin peamiselt HTML ja CSS
+                            programmeerimiskeeli kasutades looma
+                            toimivat kodulehte.
+                        </li>
+                        <li>
+                            Kogu õpilasfirma toimiva perioodi vältel saatsid tiimikaaslased mulle sisutekste ja
+                            erinevaid kujundusi, mida lisasin pidevalt kodulehele.
+                        </li>
+                    </ol>
+
                 </div>
                 <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                     <ul class="list-style-6 margin-twelve-left">
-                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label>Õpilasfirma Syte
+                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ühisprojekt:</label>Õpilasfirma
+                            Syte
+                        </li>
+                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Meeskond:</label>Lorena
+                            Voronov, Karin Elmi, Kelli Kütt, Evelin Lidmets, Kaidi Kaunis, Oliver Juss
                         </li>
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Anželika Toll
                         </li>
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Õpilasfirmale
-                            Syte kodulehe loomine</li>
+                            Syte kodulehe prototüübi kavandamine ja loomine</li>
+
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2022 jaanuar</li>
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a
                                 href="#">www.freepik.com</li>
@@ -112,52 +139,31 @@
         </div>
     </section>
     <!-- end information section -->
+    <section class="wow animate__fadeIn">
+        <div class="container">
+            <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
 
-    <!-- start image gallery item -->
-    <div class="grid-item wow animate__fadeInUp margin-two-top">
-        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652942530/Koduleht/syte_lehe_pilt_oturyp.jpg"
-            class=" lightbox-group-gallery-item ">
-            <figure>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
-                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652942530/Koduleht/syte_lehe_pilt_oturyp.jpg"
-                        alt="" class="w-70 zoomin " />
-                </div>
-                <figcaption>
-                    <div class="portfolio-hover-main text-center">
-                        <div class="portfolio-hover-box align-middle">
-                            <div class="portfolio-hover-content position-relative ">
-                                <i class="ti-zoom-in text-white-2 fa-2x"></i>
-                            </div>
+                <a href="https://www.figma.com/proto/sNcFVwL7BaywnVIuQvvwpZ/syte-koduleht?node-id=46%3A614&scaling=min-zoom&page-id=0%3A1&starting-point-node-id=46%3A614&show-proto-sidebar=1"
+                    target="_blank"><img
+                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1670920082/Koduleht/Syte_nctwak.jpg"
+                        class="w-100 hoverikoon" alt="" /></a>
+            </div>
+            <div class="row">
+                <div class="row">
+                    <div class="row">
+                        <div class="row">
                         </div>
-                    </div>
-                </figcaption>
-            </figure>
-        </a>
-    </div>
-    <!-- end image gallery item -->
+                        <div class="row">
+                            <div class="row">
 
-    <!-- start image gallery item -->
-    <div class="grid-item wow animate__fadeInUp">
-        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652942697/Koduleht/syte_lehe_pilt2_jicphs.jpg"
-            class=" lightbox-group-gallery-item ">
-            <figure>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
-                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652942697/Koduleht/syte_lehe_pilt2_jicphs.jpg"
-                        alt="" class="w-70 zoomin " />
-                </div>
-                <figcaption>
-                    <div class="portfolio-hover-main text-center">
-                        <div class="portfolio-hover-box align-middle">
-                            <div class="portfolio-hover-content position-relative ">
-                                <i class="ti-zoom-in text-white-2 fa-2x"></i>
+                                <div class="row">
+
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                </figcaption>
-            </figure>
-        </a>
-    </div>
-    <!-- end image gallery item -->
+    </section>
+
+
+
 
     <!-- start image gallery item -->
     <div class="grid-item wow animate__fadeInUp">
@@ -182,51 +188,9 @@
     </div>
     <!-- end image gallery item -->
 
-    <!-- start image gallery item -->
-    <div class="grid-item wow animate__fadeInUp">
-        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652943460/Koduleht/syte_lehe_pilt4_hcgfyt.jpg"
-            class=" lightbox-group-gallery-item ">
-            <figure>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
-                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652943460/Koduleht/syte_lehe_pilt4_hcgfyt.jpg"
-                        alt="" class="w-70 zoomin " />
-                </div>
-                <figcaption>
-                    <div class="portfolio-hover-main text-center">
-                        <div class="portfolio-hover-box align-middle">
-                            <div class="portfolio-hover-content position-relative ">
-                                <i class="ti-zoom-in text-white-2 fa-2x"></i>
-                            </div>
-                        </div>
-                    </div>
-                </figcaption>
-            </figure>
-        </a>
-    </div>
-    <!-- end image gallery item -->
 
-    <!-- start image gallery item -->
-    <div class="grid-item wow animate__fadeInUp">
-        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652943750/Koduleht/syte_lehe_pilt5_cwwtrq.jpg"
-            class=" lightbox-group-gallery-item ">
-            <figure>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
-                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652943750/Koduleht/syte_lehe_pilt5_cwwtrq.jpg"
-                        alt="" class="w-70 zoomin " />
-                </div>
-                <figcaption>
-                    <div class="portfolio-hover-main text-center">
-                        <div class="portfolio-hover-box align-middle">
-                            <div class="portfolio-hover-content position-relative ">
-                                <i class="ti-zoom-in text-white-2 fa-2x"></i>
-                            </div>
-                        </div>
-                    </div>
-                </figcaption>
-            </figure>
-        </a>
-    </div>
-    <!-- end image gallery item -->
+
+
 
     <!-- start image gallery item -->
     <div class="grid-item wow animate__fadeInUp">
@@ -275,28 +239,7 @@
     <!-- end image gallery item -->
 
     <!-- start gallery section -->
-    <section class="wow animate__fadeIn">
-        <div class="container">
-            <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
 
-                <a href="https://www.figma.com/file/sNcFVwL7BaywnVIuQvvwpZ/syte-koduleht?node-id=0%3A1&t=1yH8CNXn08q46w0j-1"
-                    target="_blank"><img
-                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1670920082/Koduleht/Syte_nctwak.jpg"
-                        class="w-100 hoverikoon" alt="" /></a>
-            </div>
-            <div class="row">
-                <div class="row">
-                    <div class="row">
-                        <div class="row">
-                        </div>
-                        <div class="row">
-                            <div class="row">
-
-                                <div class="row">
-
-                                </div>
-                            </div>
-    </section>
     <!-- end gallery section -->
     <!-- start gallery section -->
     <!-- <section class="wow animate__fadeIn bg-light-gray">
