pipewell lehe uuendamine

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                         <!-- end portfolio item -->
 
                         <!-- start portfolio item -->
-                        <li class="grid-item grid-item-double trükis disain wow animate__fadeInUp"
+                        <li class="grid-item grid-item-double reklaam trükis disain wow animate__fadeInUp"
                             data-wow-delay="0.4s">
                             <a href="sos_lastekula_voltik.html">
                                 <figure>
@@ -284,7 +284,8 @@
                             </a>
                         </li>
                         <!-- end portfolio item -->
-                        <li class="grid-item grid-item-double logo disain cvi wow animate__fadeInUp" data-wow-delay="0.2s">
+                        <li class="grid-item grid-item-double trükis logo disain cvi wow animate__fadeInUp"
+                            data-wow-delay="0.2s">
                             <a href="pipewell.html">
                                 <figure>
                                     <div class="portfolio-img"><img
@@ -306,20 +307,21 @@
                         </li>
 
                         <!-- start portfolio item -->
-                        <li class="grid-item grid-item-double logo disain reklaam wow animate__fadeInUp">
+                        <li class="grid-item grid-item-double cvi logo disain reklaam wow animate__fadeInUp">
                             <a href="koolitusmajakas.html">
                                 <figure>
                                     <div class="portfolio-img"><img
                                             src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674306214/Koduleht/original_koolimajaks_mockup_2700x1335_copy_a1b2y1.webp"
                                             alt="" /></div>
-                                    
+
                                     <figcaption>
                                         <div class="portfolio-hover-main">
                                             <div class="portfolio-hover-box align-middle">
                                                 <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                                 <span
                                                     class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Koolitusmajakas</span>
-                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja
+                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo, CVI
+                                                    ja
                                                     Disain</p>
                                             </div>
                                         </div>
@@ -397,7 +399,7 @@
                         <!-- end portfolio item -->
 
                         <!-- start  portfolio item -->
-                        <li class="grid-item wow animate__fadeInUp reklaam disain" data-wow-delay="0.4s">
+                        <li class="grid-item wow animate__fadeInUp bänner reklaam disain" data-wow-delay="0.4s">
                             <a href="mars_roll_up_b2nner.html">
                                 <figure>
                                     <div class="portfolio-img"><img
@@ -443,7 +445,7 @@
                         <!-- end portfolio item-->
 
                         <!-- start portfolio item -->
-                        <li class="grid-item grid-item-double trükis disain  reklaam wow animate__fadeInUp">
+                        <li class="grid-item grid-item-double bänner reklaam disain  reklaam wow animate__fadeInUp">
                             <a href="spordibanner.html">
                                 <figure>
                                     <div class="portfolio-img"><img
@@ -454,7 +456,7 @@
                                             <div class="portfolio-hover-box align-middle">
                                                 <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                                 <span
-                                                    class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Spordibännner</span>
+                                                    class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Reklaambänner</span>
                                                 <p class="no-letter-spacing text-small mb-0 text-medium-gray">Reklaam ja
                                                     Disain</p>
                                             </div>
