--- a/pipewell.html
+++ b/pipewell.html
@@ -105,76 +105,22 @@
             </div>
     </section>
     <!-- end information section -->
-
-    <!-- start image gallery item -->
-    <div class="grid-item wow animate__fadeInUp margin-two-top">
-        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674629523/Koduleht/pipewell_reeglid2_copy_ql0sgr.webp"
-            class=" lightbox-group-gallery-item ">
-            <title><a href="/images/pipewell_reeglid.pdf"></a></title>
-            <figure>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
-                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674629523/Koduleht/pipewell_reeglid2_copy_ql0sgr.webp"
-                        alt="" class="w-70 zoomin " />
+    <section class="wow animate__fadeIn">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp  ">
+                    <a href="images/pipewell_reeglid.pdf" target="_blank"><img
+                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674629523/Koduleht/pipewell_reeglid2_copy_ql0sgr.webp"
+                            class="w-100  hoverikoon" alt="" /> <img src="" alt="">
                 </div>
-                <figcaption>
-                    <div class="portfolio-hover-main text-center">
-                        <div class="portfolio-hover-box align-middle">
-                            <div class="portfolio-hover-content position-relative ">
-                                <i class="ti-zoom-in text-white-2 fa-2x"></i>
-                            </div>
-                        </div>
-                    </div>
-                </figcaption>
-            </figure>
-        </a>
-    </div>
-    <!-- end image gallery item -->
 
-    <!-- start image gallery item -->
-    <div class="grid-item wow animate__fadeInUp">
-        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674629807/Koduleht/pipewell_reeglid4_copy_zgfg4f.webp"
-            class=" lightbox-group-gallery-item ">
-            <figure>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
-                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674629807/Koduleht/pipewell_reeglid4_copy_zgfg4f.webp"
-                        alt="" class="w-70 zoomin " />
-                </div>
-                <figcaption>
-                    <div class="portfolio-hover-main text-center">
-                        <div class="portfolio-hover-box align-middle">
-                            <div class="portfolio-hover-content position-relative ">
-                                <i class="ti-zoom-in text-white-2 fa-2x"></i>
-                            </div>
-                        </div>
-                    </div>
-                </figcaption>
-            </figure>
-        </a>
-    </div>
-    <!-- end image gallery item -->
+            </div>
+        </div>
+    </section>
 
-    <!-- start image gallery item -->
-    <div class="grid-item wow animate__fadeInUp">
-        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674629962/Koduleht/pipewell_reeglid7_copy_zdxwwo.webp"
-            class=" lightbox-group-gallery-item ">
-            <figure>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
-                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674629962/Koduleht/pipewell_reeglid7_copy_zdxwwo.webp"
-                        alt="" class="w-70 zoomin " />
-                </div>
-                <figcaption>
-                    <div class="portfolio-hover-main text-center">
-                        <div class="portfolio-hover-box align-middle">
-                            <div class="portfolio-hover-content position-relative ">
-                                <i class="ti-zoom-in text-white-2 fa-2x"></i>
-                            </div>
-                        </div>
-                    </div>
-                </figcaption>
-            </figure>
-        </a>
-    </div>
-    <!-- end image gallery item -->
+
+
+
 
 
     <!-- start gallery section -->
