--- a/spordibanner.html
+++ b/spordibanner.html
@@ -67,7 +67,7 @@
                         &nbsp;&nbsp; • &nbsp;&nbsp; Disain</span>
                     <h1
                         class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">
-                        Bänner seinale</h1>
+                        Reklaambänneri kujudamine</h1>
                 </div>
                 <div
                     class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
@@ -81,8 +81,8 @@
                         <!-- <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label></li> -->
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Erik Riige
                         </li>
-                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Kujundada
-                            Bänner seinale
+                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Reklaambänneri
+                            kujudamine
                         </li>
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>Aprill 2021</li>
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a
