uuendatud pipewell pdf

--- a/pipewell.html
+++ b/pipewell.html
@@ -109,7 +109,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp  ">
-                    <a href="images/pipewell_reeglid.pdf" target="_blank"><img
+                    <a href="images/pipewell_reeglid2.pdf" target="_blank"><img
                             src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674629523/Koduleht/pipewell_reeglid2_copy_ql0sgr.webp"
                             class="w-100  hoverikoon" alt="" /> <img src="" alt="">
                 </div>
