--- a/daim_marabou_uhistend.html
+++ b/daim_marabou_uhistend.html
@@ -392,9 +392,9 @@
                     <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
                         <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine
                             projekt</span>
-                        <a href="syte.html">
+                        <a href="koolitusmajakas.html">
                             <i class="ti-arrow-left blog-nav-icon"></i>
-                            Syte
+                            Koolitusmajakas
                         </a>
                     </div>
                 </div>
