--- a/eesti_ekspress.html
+++ b/eesti_ekspress.html
@@ -333,9 +333,9 @@
                     <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
                         <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine
                             projekt</span>
-                        <a href="minu_cvi.html">
+                        <a href="sos_lastekula_voltik.html">
                             <i class="ti-arrow-left blog-nav-icon"></i>
-                            Minu logo
+                            SOS Lasteküla voldik
                         </a>
                     </div>
                 </div>
@@ -346,9 +346,9 @@
                     <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">
                         <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine
                             projekt</span>
-                        <a href="sos_lastekula_voltik.html">
+                        <a href="ajakiri.html">
                             <i class="ti-arrow-right blog-nav-icon"></i>
-                            SOS Lasteküla voldik
+                            Ametikool 100 ajakiri
                         </a>
                     </div>
                 </div>
