--- a/koolitusmajakas.html
+++ b/koolitusmajakas.html
@@ -399,9 +399,9 @@
                     <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
                         <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine
                             projekt</span>
-                        <a href="sos_lastekula_voltik.html">
+                        <a href="konverents_logo.html">
                             <i class="ti-arrow-left blog-nav-icon"></i>
-                            SOS Lasteküla voldik
+                            Juhtimiskonverents 2022
                         </a>
                     </div>
                 </div>
@@ -412,9 +412,9 @@
                     <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">
                         <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine
                             projekt</span>
-                        <a href="pipewell.html">
+                        <a href="daim_marabou_uhistend.html">
                             <i class="ti-arrow-right blog-nav-icon"></i>
-                            Pipewell
+                            Daim Marabou Ühistend
                         </a>
                     </div>
                 </div>
