--- a/minu_cvi.html
+++ b/minu_cvi.html
@@ -394,9 +394,9 @@
                     <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">
                         <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine
                             projekt</span>
-                        <a href="eesti_ekspress.html">
+                        <a href="syte.html">
                             <i class="ti-arrow-right blog-nav-icon"></i>
-                            Eesti Ekspress
+                            Syte
                         </a>
                     </div>
                 </div>
