--- a/pipewell.html
+++ b/pipewell.html
@@ -303,9 +303,9 @@
                     <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
                         <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine
                             projekt</span>
-                        <a href="koolitusmajakas.html">
+                        <a href="syte.html">
                             <i class="ti-arrow-left blog-nav-icon"></i>
-                            Koolimajakas
+                            Syte
                         </a>
                     </div>
                 </div>
@@ -316,9 +316,9 @@
                     <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">
                         <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine
                             projekt</span>
-                        <a href="syte.html">
+                        <a href="sos_lastekula_voltik.html">
                             <i class="ti-arrow-right blog-nav-icon"></i>
-                            Syte
+                            SOS Lasteküla voldik
                         </a>
                     </div>
                 </div>
