--- a/sos_lastekula_voltik.html
+++ b/sos_lastekula_voltik.html
@@ -499,9 +499,9 @@
                     <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
                         <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine
                             projekt</span>
-                        <a href="eesti_ekspress.html">
+                        <a href="sos_lastekula_voltik.html">
                             <i class="ti-arrow-left blog-nav-icon"></i>
-                            Eesti Ekspress
+                            SOS Lasteküla voldik
                         </a>
                     </div>
                 </div>
@@ -512,9 +512,9 @@
                     <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">
                         <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine
                             projekt</span>
-                        <a href="koolitusmajakas.html">
+                        <a href="eesti_ekspress.html">
                             <i class="ti-arrow-right blog-nav-icon"></i>
-                            Koolitusmajakas
+                            Eesti Ekspress
                         </a>
                     </div>
                 </div>
