--- a/konverents_logo.html
+++ b/konverents_logo.html
@@ -478,9 +478,9 @@
                     <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">
                         <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine
                             projekt</span>
-                        <a href="minu_cvi.html">
+                        <a href="koolitusmajakas.html">
                             <i class="ti-arrow-right blog-nav-icon"></i>
-                            Minu Logo
+                            Koolitusmajakas
                         </a>
                     </div>
                 </div>
