--- a/syte.html
+++ b/syte.html
@@ -379,9 +379,9 @@
                     <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
                         <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine
                             projekt</span>
-                        <a href="koolitusmajakas.html">
+                        <a href="minu_cvi.html">
                             <i class="ti-arrow-left blog-nav-icon"></i>
-                            Koolimajakas
+                            Oliver Juss logo
                         </a>
                     </div>
                 </div>
@@ -392,9 +392,9 @@
                     <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">
                         <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine
                             projekt</span>
-                        <a href="daim_marabou_uhistend.html">
+                        <a href="pipewell.html">
                             <i class="ti-arrow-right blog-nav-icon"></i>
-                            Daim ja Marabou ühisstend
+                            Pipewell
                         </a>
                     </div>
                 </div>
