eesti ekspressi tagasi mineku lisamine ajakirja lehele

--- a/ajakiri.html
+++ b/ajakiri.html
@@ -387,13 +387,14 @@
             <!-- next and previous projcet stat -->
             <div class="row justify-content-between align-items-center g-0 padding-30px-lr md-padding-15px-lr">
                 <div class="w-45 text-start">
-                    <!-- <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
-                        <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Previous Project</span>
-                        <a href="van_gogh.html">
+                    <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
+                        <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Previous
+                            Project</span>
+                        <a href="eesti_ekspress.html">
                             <i class="ti-arrow-left blog-nav-icon"></i>
-                            Van goghi Raamat
+                            Eesti Ekspress
                         </a>
-                    </div> -->
+                    </div>
                 </div>
                 <!-- <div class="w-10 text-center">
                     <a href="portfolio-boxed-grid-overlay.html" class="blog-nav-link blog-nav-home"><i class="ti-layout-grid2-alt"></i></a>
