--- a/sos_lastekula_voltik.html
+++ b/sos_lastekula_voltik.html
@@ -112,11 +112,11 @@
 
     <!-- start image gallery item -->
     <div class="grid-item wow animate__fadeInUp margin-two-top">
-        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673727270/Koduleht/z-volt_voltik_zprela.jpg"
+        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1676376746/Koduleht/z-volt_voltik_bgbyoy.webp"
             class=" lightbox-group-gallery-item ">
             <figure>
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
-                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673727270/Koduleht/z-volt_voltik_zprela.jpg"
+                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1676376746/Koduleht/z-volt_voltik_bgbyoy.webp"
                         alt="" class="w-70 zoomin " />
                 </div>
                 <figcaption>
@@ -135,11 +135,11 @@
 
     <!-- start image gallery item -->
     <div class="grid-item wow animate__fadeInUp">
-        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673727591/Koduleht/z-volt_voltik2_y8ypfo.jpg"
+        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1676376741/Koduleht/z-volt_voltik2_m84ncq.webp"
             class=" lightbox-group-gallery-item ">
             <figure>
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
-                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673727591/Koduleht/z-volt_voltik2_y8ypfo.jpg"
+                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1676376741/Koduleht/z-volt_voltik2_m84ncq.webp"
                         alt="" class="w-70 zoomin " />
                 </div>
                 <figcaption>
@@ -158,11 +158,11 @@
 
     <!-- start image gallery item -->
     <div class="grid-item wow animate__fadeInUp">
-        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673727270/Koduleht/z-volt_voltik3_qgktmo.jpg"
+        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1676376744/Koduleht/z-volt_voltik3_jykkgo.webp"
             class=" lightbox-group-gallery-item ">
             <figure>
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
-                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673727270/Koduleht/z-volt_voltik3_qgktmo.jpg"
+                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1676376744/Koduleht/z-volt_voltik3_jykkgo.webp"
                         alt="" class="w-70 zoomin " />
                 </div>
                 <figcaption>
@@ -181,11 +181,11 @@
 
     <!-- start image gallery item -->
     <div class="grid-item wow animate__fadeInUp">
-        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673727270/Koduleht/z-volt_voltik4_ihe9g3.jpg"
+        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1676376746/Koduleht/z-volt_voltik4_jcuia0.webp"
             class=" lightbox-group-gallery-item ">
             <figure>
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
-                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673727270/Koduleht/z-volt_voltik4_ihe9g3.jpg"
+                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1676376746/Koduleht/z-volt_voltik4_jcuia0.webp"
                         alt="" class="w-70 zoomin " />
                 </div>
                 <figcaption>
