--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                         KUJUNDUSGRAAFIK</div>
                     <div
                         class="text-medium-gray text-uus-small text-uppercase margin-10px-top letter-spacing-2 alt-font sm-margin-10px-top">
-                        <a href="CV.html">CURRICULUM VITAE</a>
+                        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1679075770/Koduleht/cv2_cq1dok.jpg">CURRICULUM
+                            VITAE</a>
                     </div>
 
 
