--- a/index.html
+++ b/index.html
@@ -94,10 +94,17 @@
                     <div
                         class="text-medium-gray text-medium text-uppercase margin-10px-top letter-spacing-2 alt-font sm-margin-10px-top">
                         KUJUNDUSGRAAFIK</div>
-                    <div
-                        class="text-medium-gray text-uus-small text-uppercase margin-10px-top letter-spacing-2 alt-font sm-margin-10px-top">
-                        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1679075770/Koduleht/cv2_cq1dok.jpg">CURRICULUM
-                            VITAE</a>
+                    <div class="grid-item wow animate__fadeInUp margin-two-top">
+                        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1679075770/Koduleht/cv2_cq1dok.jpg"
+                            class=" text-small text-uppercase margin-10px-top letter-spacing-2 alt-font sm-margin-10px-top lightbox-group-gallery-item red">
+                            CURRICULUM VITAE</a>
+
+                        <figure>
+                            <figcaption>
+
+                            </figcaption>
+                        </figure>
+                        </a>
                     </div>
 
 
