--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                         class="text-medium-gray text-medium text-uppercase margin-10px-top letter-spacing-2 alt-font sm-margin-10px-top">
                         KUJUNDUSGRAAFIK</div>
                     <div class="grid-item wow animate__fadeInUp margin-two-top">
-                        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1679075770/Koduleht/cv2_cq1dok.jpg"
-                            class=" text-small text-uppercase margin-10px-top letter-spacing-2 alt-font sm-margin-10px-top lightbox-group-gallery-item red">
+                        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1679140262/Koduleht/cv2_be472k.jpg"
+                            class="red text-small text-uppercase margin-10px-top letter-spacing-2 alt-font sm-margin-10px-top lightbox-group-gallery-item">
                             CURRICULUM VITAE</a>
 
                         <figure>
