--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                         class="text-medium-gray text-medium text-uppercase margin-10px-top letter-spacing-2 alt-font sm-margin-10px-top">
                         KUJUNDUSGRAAFIK</div>
                     <div class="grid-item wow animate__fadeInUp margin-two-top">
-                        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1679144996/Koduleht/image_3_2_hkip0d.svg"
-                            class="red text-small text-uppercase margin-10px-top letter-spacing-2 alt-font sm-margin-10px-top lightbox-group-gallery-item">
+                        <a href="CV2.html"
+                            class="red text-small text-uppercase margin-10px-top letter-spacing-2 alt-font sm-margin-10px-top ">
                             CURRICULUM VITAE</a>
 
                         <figure>
