--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         class="text-medium-gray text-medium text-uppercase margin-10px-top letter-spacing-2 alt-font sm-margin-10px-top">
                         KUJUNDUSGRAAFIK</div>
                     <div class="grid-item wow animate__fadeInUp margin-two-top">
-                        <a href="CV2.html"
+                        <a href="images/cv.pdf" target="_blank"
                             class="red text-small text-uppercase margin-10px-top letter-spacing-2 alt-font sm-margin-10px-top ">
                             CURRICULUM VITAE</a>
 
