--- a/CV2.html
+++ b/CV2.html
@@ -57,176 +57,24 @@
         <!-- end navigation -->
     </header>
     <!-- end header -->
-    <div class=" text-center"><img
-            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1679149603/Koduleht/cv2_pbnqaw.jpg" alt=""
-            class="w-60" />
-    </div>
+    <div class="row">
+        <a href="website-link-goes-here" target="_blank"></a>
+        <p>To learn how to code for free, please visit <a href="https://www.freecodecamp.org/learn" </div>
 
-    <!-- uus footer -->
-    <div>
+                <!-- uus footer -->
 
-        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1679144996/Koduleht/image_3_2_hkip0d.svg"></a>
-    </div>
-    <!-- start footer -->
-    <footer class="footer-center-logo padding-five-tb sm-padding-30px-tb">
-        <div class="container">
-            <div class="row align-items-center">
-                <!-- start copyright -->
-                <div class="col-lg-4 col-md-5 text-small text-center alt-font sm-margin-15px-bottom">
-                    &COPY; Kõik õigused kaitstud 2023 <a href="#" target="_blank"
-                        title=""></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; oliver.juss@ametikool.ee
-                </div>
-                <!-- end copyright -->
-                <!-- start logo -->
-                <div class="col-lg-4 col-md-2 text-center sm-margin-10px-bottom">
-                    <a href="index.html"><img class="footer-logo"
-                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642959744/Koduleht/Asset_1_my4eql.svg"
-                            data-at2x="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642959744/Koduleht/Asset_1_my4eql.svg"
-                            alt="Portfolio"></a>
-                </div>
-                <!-- end logo -->
-                <!-- start social media -->
-                <div class="col-lg-4 col-md-5 text-center">
-                    <span class="alt-font text-small margin-10px-right md-margin-5px-right"> +372 5668 1811</span>
 
-                    <div class="social-icon-style-8 d-inline-block align-middle">
-                        <ul class="small-icon mb-0">
-                            <li><a class="facebook" href="#" target="_blank"><i class="fab fa-facebook-f"
-                                        aria-hidden="true"></i></a></li>
-                            <li><a class="twitter" href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                            <li><a class="google" href="#" target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
-                            <li><a class="instagram" href="#" target="_blank"><i class="fab fa-instagram me-0"
-                                        aria-hidden="true"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- end social media -->
-            </div>
-        </div>
-    </footer>
-    <!-- lopp uus footer -->
-
-    <!-- start slogan -->
-    <!-- <div class="col-lg-4 col-md-5 text-center alt-font sm-margin-15px-bottom">
-                            London based highly creative studio
-                        </div> -->
-    <!-- end slogan -->
-    <!-- start logo -->
-    <!-- <div class="col-lg-4 col-md-2 text-center sm-margin-10px-bottom">
-                            <a href="index.html"><img class="footer-logo" src="images/logo-white.png" data-at2x="images/logo-white@2x.png" alt="Pofo"></a>
-                        </div> -->
-    <!-- end logo -->
-    <!-- start social media -->
-    <!-- <div class="col-lg-4 col-md-5 text-center">
-                            <span class="alt-font margin-20px-right md-margin-15px-right">On social networks</span>
-                            <div class="social-icon-style-8 d-inline-block align-middle">
-                                <ul class="small-icon mb-0">
-                                    <li><a class="facebook text-white-2" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-                                    <li><a class="twitter text-white-2" href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a class="google text-white-2" href="https://plus.google.com" target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
-                                    <li><a class="instagram text-white-2" href="https://instagram.com/" target="_blank"><i class="fab fa-instagram no-margin-right" aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
-                        </div> -->
-    <!-- end social media -->
-    <!-- </div>
-                </div>
-            </div>
-            <div class="footer-widget-area padding-five-top padding-30px-bottom sm-padding-30px-top">
-                <div class="container">
-                    <div class="row"> -->
-    <!-- start about -->
-    <!-- <div class="col-lg-3 col-sm-6 widget md-margin-30px-bottom text-center text-sm-start last-paragraph-no-margin">
-                            <div class="widget-title alt-font text-small text-medium-gray text-uppercase margin-15px-bottom font-weight-600">About Agency</div>
-                            <p class="text-small w-95 sm-w-100">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.  Lorem Ipsum is simply dummy text of the and typesetting industry. </p>
-                        </div> -->
-    <!-- end about -->
-    <!-- start blog post -->
-    <!-- <div class="col-lg-3 col-sm-6 widget md-margin-30px-bottom">
-                            <div class="widget-title alt-font text-small text-medium-gray text-uppercase margin-15px-bottom font-weight-600 text-center text-sm-start">Latest Blog Post</div>
-                            <ul class="latest-post position-relative">
-                                <li class="media d-flex border-bottom border-color-medium-dark-gray">
-                                    <figure class="flex-shrink-0">
-                                        <a href="blog-post-layout-01.html"><img src="https://via.placeholder.com/700x403" alt=""></a>
-                                    </figure>
-                                    <div class="media-body flex-grow-1 text-small"><a href="blog-post-layout-01.html" class="d-block mb-1">Design is not just what looks...</a> <span class="clearfix"></span>20 April 2017 | by <a href="blog-grid.html">Herman Miller</a></div>
-                                </li>
-                                <li class="media d-flex border-bottom border-color-medium-dark-gray">
-                                    <figure class="flex-shrink-0">
-                                        <a href="blog-post-layout-02.html"><img src="https://via.placeholder.com/700x403" alt=""></a>
-                                    </figure>
-                                    <div class="media-body flex-grow-1 text-small"><a href="blog-post-layout-02.html" class="d-block mb-1">A lot of care, effort & passion...</a> <span class="clearfix"></span>20 April 2017 | by <a href="blog-grid.html">Herman Miller</a></div>
-                                </li>
-                                <li class="media d-flex">
-                                    <figure class="flex-shrink-0">
-                                        <a href="blog-post-layout-03.html"><img src="https://via.placeholder.com/700x403" alt=""></a>
-                                    </figure>
-                                    <div class="media-body flex-grow-1 text-small"><a href="blog-post-layout-03.html" class="d-block mb-1">I love making the stuff, that's...</a> <span class="clearfix"></span>20 April 2017 | by <a href="blog-grid.html">Herman Miller</a></div>
-                                </li>
-                            </ul>
-                        </div> -->
-    <!-- end blog post -->
-    <!-- start newsletter -->
-    <!-- <div class="col-lg-3 col-sm-6 widget xs-margin-30px-bottom text-center text-sm-start">
-                            <div class="widget-title alt-font text-small text-medium-gray text-uppercase margin-15px-bottom font-weight-600">Subscribe Newsletter</div>
-                            <p class="text-small w-90 sm-w-100">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                            <form action="email-templates/subscribe-newsletter.php" method="post">
-                                <div class="position-relative newsletter w-95">
-                                    <div class="col-12 mx-0">
-                                        <div class="form-results d-none"></div>
-                                    </div>
-                                    <div class="position-relative w-100 h-100">
-                                        <input type="email" id="email" name="email" class="bg-transparent text-small m-0 border-color-medium-dark-gray required" placeholder="Enter your email...">
-                                        <button id="button-subscribe-newsletter" type="submit" class="btn btn-arrow-small position-absolute border-color-medium-dark-gray submit"><i class="fas fa-caret-right no-margin-left"></i></button>
-                                    </div>   
-                                </div>
-                            </form> -->
-    <!-- </div> -->
-    <!-- end newsletter -->
-    <!-- start instagram -->
-    <!-- <div class="col-lg-3 col-sm-6 widget text-center text-sm-start">
-                            <div class="widget-title alt-font text-small text-medium-gray text-uppercase margin-15px-bottom font-weight-600">Follow us Instagram</div>
-                            <div class="w-100 d-inline-block">
-                                <ul class="instafeed-grid instafeed-wrapper grid grid-3col xl-grid-3col lg-grid-3col md-grid-3col sm-grid-3col xs-grid-3col gutter-small" data-total="6">
-                                    <li class="grid-item">
-                                        <figure>
-                                            <a href="#" data-href="{{link}}" target="_blank">
-                                                <img src="#" data-src="{{image}}" class="insta-image" alt="" />
-                                                <span class="insta-counts"><i class="ti-instagram"></i>{{likes}}</span>
-                                            </a>
-                                        </figure>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div> -->
-    <!-- end instagram -->
-    <!-- </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="footer-bottom border-top border-color-medium-dark-gray padding-30px-top">
-                    <div class="row"> -->
-    <!-- start copyright -->
-    <!-- <div class="col-lg-6 col-md-6 text-small text-md-start text-center">POFO - Portfolio Concept Theme</div>
-                        <div class="col-lg-6 col-md-6 text-small text-md-end text-center">&COPY; 2021 POFO is Proudly Powered by <a href="http://www.themezaa.com" target="_blank" title="ThemeZaa">ThemeZaa</a></div> -->
-    <!-- end copyright -->
-    <!-- </div>
-                </div>
-            </div>
-        </footer> -->
-    <!-- end footer -->
-
-    <!-- start scroll to top -->
-    <a class="scroll-top-arrow" href="javascript:void(0);"><i class="ti-arrow-up"></i></a>
-    <!-- end scroll to top  -->
-    <!-- javascript -->
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootsnav.js"></script>
-    <script type="text/javascript" src="js/jquery.nav.js"></script>
-    <script type="text/javascript" src="js/hamburger-menu.js"></script>
-    <script type="text/javascript" src="js/theme-vendors.min.js"></script>
-    <!-- setting -->
-    <script type="text/javascript" src="js/main.js"></script>
+                <!-- start scroll to top -->
+                <a class="scroll-top-arrow" href="javascript:void(0);"><i class="ti-arrow-up"></i></a>
+                <!-- end scroll to top  -->
+                <!-- javascript -->
+                <script type="text/javascript" src="js/jquery.min.js"></script>
+                <script type="text/javascript" src="js/bootsnav.js"></script>
+                <script type="text/javascript" src="js/jquery.nav.js"></script>
+                <script type="text/javascript" src="js/hamburger-menu.js"></script>
+                <script type="text/javascript" src="js/theme-vendors.min.js"></script>
+                <!-- setting -->
+                <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
