--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                     <div
                         class="text-medium-gray text-medium text-uppercase margin-10px-top letter-spacing-2 alt-font sm-margin-10px-top">
                         KUJUNDUSGRAAFIK</div>
-                    <div class="grid-item wow animate__fadeInUp margin-two-top">
-                        <a href="images/cv.pdf" target="_blank"
+                    <div class="grid-item wow animate__fadeInUp ">
+                        <a href="images/Oliver_Juss_CURRICULUM VITAE.pdf" target="_blank"
                             class="red text-small text-uppercase margin-10px-top letter-spacing-2 alt-font sm-margin-10px-top ">
                             CURRICULUM VITAE</a>
 
@@ -106,6 +106,7 @@
                         </figure>
                         </a>
                     </div>
+
 
 
 
