--- a/daim_marabou_uhistend.html
+++ b/daim_marabou_uhistend.html
@@ -351,7 +351,7 @@
                 <!-- start copyright -->
                 <div class="col-lg-4 col-md-5 text-small text-center alt-font sm-margin-15px-bottom">
                     &COPY; Kõik õigused kaitstud 2023 <a href="#" target="_blank"
-                        title="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; oliver.juss@ametikool.ee</a>
+                        title="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; oliverjussdesign@gmail.com</a>
                 </div>
                 <!-- end copyright -->
                 <!-- start logo -->
