--- a/koolitusmajakas.html
+++ b/koolitusmajakas.html
@@ -359,7 +359,7 @@
                 <!-- start copyright -->
                 <div class="col-lg-4 col-md-5 text-small text-center alt-font sm-margin-15px-bottom">
                     &COPY; Kõik õigused kaitstud 2023 <a href="#" target="_blank"
-                        title=""></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; oliver.juss@ametikool.ee
+                        title=""></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; oliverjussdesign@gmail.com
                 </div>
                 <!-- end copyright -->
                 <!-- start logo -->
