--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                 <!-- start copyright -->
                 <div class="col-lg-4 col-md-5 text-small text-center alt-font sm-margin-15px-bottom">
                     &COPY; Kõik õigused kaitstud 2023 <a href="mailto:oliver.juss@ametikool.ee" target="_blank"
-                        title="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; oliver.juss@ametikool.ee</a>
+                        title="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; oliverjussdesign@gmail.com</a>
                 </div>
                 <!-- end copyright -->
                 <!-- start logo -->
